--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,17 +1,5 @@
-# Use an official Python runtime as a parent image
 FROM python:3.9
-
-# Set environment variables
-ENV PYTHONUNBUFFERED 1
-
-# Set the working directory in the container
 WORKDIR /app
-
-# Copy the current directory contents into the container at /app
 COPY . /app
-
-# Install any needed packages specified in requirements.txt
-RUN pip install --no-cache-dir -r requirements.txt
-
-# Run the specified command within the container
+RUN pip install -r requirements.txt
 CMD ["run", "bot.py"]
